Meta Tags and OG

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+      name="description"
+      content="Little Lemon App is Developed By Kevin Brian"
+    />
+    <meta name="og:title" description="Little Lemon App"/>
+    <meta name="og:description" description="Little Lemon App description"/>
+    <meta name="og:image" description=""/>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -13,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon App</title>
   </head>
   <body>
     <div id="root"></div>
